--- a/templates/resultadoCS.html
+++ b/templates/resultadoCS.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block play %}
 <html>
-<h4 style="float: left; width: 50%"><p><a href={{upr+'?'+numeroR }}
-                                          target="_blank" style="color: #444"> SIP CORRIDO:  {{ sipsele }}</a></p></h4>
-<h4 style="float: left; width: 50%"><p><a href={{'/palabras.txt'+'?'+numeroR }}
-                                          target="_blank" style="color: #444">Palabras del computo </a></p></h4>
+<h4 style="float: left; width: 50%; margin-bottom: 0%">
+    <p><a href={{upr+'?'+numeroR }} target="_blank" style="color: #444"> SIP CORRIDO:  {{ sipsele }}</a></p>
+</h4>
+<h4 style="float: left; width: 50%; margin-bottom: 0%">
+    <p><a href={{'/palabras.txt'+'?'+numeroR }} target="_blank" style="color: #444">Palabras del computo </a></p>
+</h4>
 
 <form action = {{ uco }} method = "POST">
     <div class="wrapper">
@@ -12,8 +14,8 @@
     </div>
 </form>
 
-<h4 style="margin-bottom: 0; color: OrangeRed;">Infromación del computo:</h4>
-<div class="scroll" style="width: 90%; height: 30%; position: fixed">
+<h4 style="margin-bottom: 0%; color: OrangeRed;">Infromación del computo:</h4>
+<div class="scroll" style="width: 97%; height: 30%; margin-bottom: 1%">
     <h5>  Palabra Inicial: </h5>
     <p> {{ pinicial }} </p>
     <h5>  Palabra Final: </h5>
