--- a/templates/base.html
+++ b/templates/base.html
@@ -54,19 +54,19 @@ li a:hover:not(.active) {
 </body>
 <style>
 body, input[type=submit], input[type=password],input[type=text]{
-    font-size: 180%;
+    font-size: 150%;
 }
 
 
 input[type=file] {
-    font-size: 100%;
-    width: 100%;
+    font-size: 80%;
+    width: 80%;
 }
 
 select {
        padding: 16px 32px;
        font-size: 20px;
-       width: 60%;
+       width: 50%;
 }
 
 .wrapper {
@@ -85,7 +85,7 @@ select {
 
 .NiceButton:hover {
     background-color: white;
-    color: black;
+    color: OrangeRed;
     border: 2px solid OrangeRed;
 }
 
