--- a/templates/base.html
+++ b/templates/base.html
@@ -38,9 +38,10 @@ li a:hover:not(.active) {
 <ul>
     <li><a class="active" href="/inicio/siu<%3Dp">Inicio</a>
     <li><a href="/corresip/siu<=p">Correr SIP</a></li>
-    <li><a href="/subesip/siu<=p">Subir SIP</a></li>
-    <li><a href="/borrasip/siu<=p">Borrar SIP</a></li>
+    <li><a href="/subesip/siu<=p">Subir Archivo</a></li>
+    <li><a href="/borrasip/siu<=p">Borrar Archivo</a></li>
     <li><a href="/archivos/siu<=p">Archivos</a></li>
+    <li style="float:right; border-left:1px solid rgb(230,230,230);"><a href="/about/siu<=p">About</a></li>
 </ul>
 
 </body>
@@ -54,7 +55,7 @@ li a:hover:not(.active) {
 </body>
 <style>
 body, input[type=submit], input[type=password],input[type=text]{
-    font-size: 150%;
+    font-size: 170%;
 }
 
 
