--- a/templates/clave.html
+++ b/templates/clave.html
@@ -29,8 +29,7 @@
 
 
 <h1 style="font-size: 290%; color:OrangeRed"> EMULADOR DE SISTEMAS DE POST </h1>
-<h1> Andreas Polymeris,
-    otroyovirtual@gmail.com
+<h1> Andreas Polymeris, andreaspolymeris@gmail.com
 </h1>
 
 
