--- a/templates/delsip.html
+++ b/templates/delsip.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block play %}
-<h2>Seleccionar SIP a borrar:</h2>
+<h2>Seleccionar Archivo a borrar:</h2>
 <h2>
 <form class="form-inline" method="POST" action="{{ url_for('borra') }}" enctype=multipart/form-data>
         <select name="comp_select" class="selectpicker form-control">
