--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block play %}
-<h2> Seleccionar Archivo: </h2>
+<h2> Seleccionar Archivo a subir: </h2>
 <h2>
     <form action="" method=post enctype=multipart/form-data>
       <input type=file name=file>
