--- a/templates/pinicial.html
+++ b/templates/pinicial.html
@@ -8,7 +8,7 @@
            <h5>Ingrese Palabra a correr:</h5>
            <h5><input type = "text" name = "pinicial" ></h5>
            
-           <h5>Ingrese tope de iteraciones(En numeros Naturales):</h5>
+           <h5>Ingrese tope de iteraciones (en numeros Naturales):</h5>
            <h5><input type="text" size="15" maxlength="30" value= "1000000" name="tope"></h5>
            
            <h2></h2>
