--- a/templates/pinicial.html
+++ b/templates/pinicial.html
@@ -5,18 +5,21 @@
     <body>
 
        <form action = {{ ues }} method = "POST">
+    
+           <h5>Vea SIP SELECCIONADO:  <a href={{upr+'?'}} target="_blank" style="color: #444">  {{ sipsele }}</a></h5>
+    
            <h5>Ingrese Palabra a correr:</h5>
            <h5><input type = "text" name = "pinicial" ></h5>
            
-           <h5>Ingrese tope de iteraciones (en numeros Naturales):</h5>
+           <h5>Ingrese tope de iteraciones (en numeros naturales):</h5>
            <h5><input type="text" size="15" maxlength="30" value= "1000000" name="tope"></h5>
            
            <h2></h2>
            <div class="wrapper">
-               <p> Sip seleccionado: {{ sipsele }} </p>
                <button class="button NiceButton" style="width: 50%;">Correr</button>
            </div>
        </form>
+        
     </body>
 </html>
 {% endblock %}
