--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,10 +4,10 @@
 <h2>
     <form action="" method=post enctype=multipart/form-data>
       <input type=file name=file>
-        <h1></h1>
+        <h5 style="color: red;">{{ warning }}</h5>
         <div class="wrapper">
             <button class="button NiceButton" style="width: 50%;">Subir</button>
         </div>
     </form>
 </h2>
-{% endblock %}    
+{% endblock %}
