--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block play %}
 <html>
-<div style="width: 40%; float: left; position: relative; top: 12px;">
+<div style="width: 40%; float: left; position: relative;">
     <p>
         Ponemos a tu disposción un Emulador
         que te permite correr Sistemas de Post [SIP]
