Chenges in the implementation

--- a/templates/pinicial.html
+++ b/templates/pinicial.html
@@ -10,8 +10,8 @@
            <h5>Ingrese Palabra a correr:</h5>
            <h5><input type = "text" name = "pinicial" ></h5>
 
-           <h5>Ingrese tope de iteraciones (en numeros naturales):</h5>
-           <h5><input type="text" size="15" maxlength="30" value= "1000000" name="tope"></h5>
+           <h5>Ingrese limite de tiempo. (Numero entero de segundos):</h5>
+           <h5><input type="text" size="15" maxlength="30" value= "10" name="tope"></h5>
 
            <h2></h2>
            <div class="wrapper">
