attributions and credentials

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -20,7 +20,7 @@
     <a href="https://www.github.com/otroyo/EmulaSIP" style="color: OrangeRed; font-size: 80%;">https://www.github.com/otroyo/EmulaSIP</a>
 
 </div>
-<img src="/static/post.png" style="width: 50%; float: right;">
+<img src="/static/post-line.png" style="width: 50%; float: right;">
 
 </html>
 {% endblock %}
